# TEP_AG

./: CMakeLists.txt  main.cpp  test.cpp
GeneticAlgorithm/: CGeneticAlgorithm.cpp  CGeneticAlgorithm.h  CInvidual.cpp  CInvidual.h  Evaluator.cpp  Evaluator.h  MyEvaluatorFactory.cpp  MyEvaluatorFactory.h  Point.cpp  Point.h  RandomGenerator.cpp  RandomGenerator.h
GroupingChallenge/: GroupingChallenge.cpp  Optimizer.cpp  Optimizer.h
Visual/: Visual.cpp  Visual.h
